# challenge_mle

./: .coveragerc  .gitignore  Dockerfile  Makefile  fly.toml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
challenge/: __init__.py  api.py  model.py
docs/: challenge.md  design-doc.md
tests/: conftest.py
tests/api/: test_api.py
tests/model/: test_model.py
tests/stress/: api_stress.py
