[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-delay-prediction"
version = "1.0.0"
description = "SCL Airport Flight Delay Prediction API"
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = {text = "MIT"}
authors = [{name = "ML Engineering Team"}]
dynamic = ["dependencies"]

[project.urls]
Source = "https://github.com/gebtc/challenge_mle"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["challenge"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
